crates/cli/tests/snapshots/task_test__shows_inputs.snap
---
source: crates/cli/tests/task_test.rs
expression: assert.output_standardized()
---
 TASKS:TEST 

Task: test
Project: tasks
Toolchains: node, typescript
Type: test

 PROCESS 

Command: jest --cache --color
Working directory: <WORKSPACE>/tasks
Runs dependencies: Concurrently
Runs in CI: Yes

 INPUTS 

  - .moon/*.{pkl,yml}
  - tasks/tests/**/*
