crates/cli/tests/snapshots/task_test__shows_outputs.snap
---
source: crates/cli/tests/task_test.rs
expression: assert.output_standardized()
---
 TASKS:LINT 

Task: lint
Project: tasks
Toolchains: node
Type: build

 PROCESS 

Command: eslint --cache --report-unused-disable-directives
Working directory: <WORKSPACE>/tasks
Runs dependencies: Concurrently
Runs in CI: Yes

 INPUTS 

  - .moon/*.yml
  - tasks/**/*

 OUTPUTS 

  - tasks/cache
