crates/cli/tests/snapshots/task_test__unknown_task.snap
---
source: crates/cli/tests/task_test.rs
expression: get_assert_stderr_output(&assert.inner)
---
Error: project::unknown_task

  × Unknown task unknown for project tasks.
  help: Has this task been configured?
